# libscratch3

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: cmake-single-platform.yml  codeql.yml
src/: exception.cpp  exception.hpp  player.cpp  player.hpp  project.cpp  project.hpp  zip.cpp  zip.hpp
test/: CMakeLists.txt  basic_sb3.sb3  test_project_construct.cpp
